-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.0
-
3
-
6626
Probably caused by landing of http://review.whamcloud.com/3246 I now get this crash:
[ 5006.818563] LustreError: 138-a: lustre-OST0001: A client on nid 0@lo was evicted due to a lock blocking callback time out: rc -107 [ 5006.820054] LustreError: Skipped 1 previous similar message [ 5006.820979] LustreError: 3302:0:(lvfs_lib.c:131:lprocfs_counter_sub()) ASSERTION( (!((stats->ls_flags & LPROCFS_STATS_FLAG_IRQ_SAFE) == 0) || (!(((current_thread_info()->preempt_count) & ((((1UL << (10))-1) << ((0 + 8) + 8)) | (((1UL << (8))-1) << (0 + 8)) | (((1UL << (1))-1) << (((0 + 8) + 8) + 10))))))) ) failed: [ 5006.822543] LustreError: 3302:0:(lvfs_lib.c:131:lprocfs_counter_sub()) LBUG [ 5006.822805] Kernel panic - not syncing: LBUG in interrupt. [ 5006.822806] [ 5006.823205] Pid: 3302, comm: ldlm_elt Not tainted 2.6.32-debug #6 [ 5006.823447] Call Trace: [ 5006.823635] [<ffffffff814f75e4>] ? panic+0xa0/0x168 [ 5006.823872] [<ffffffffa0449f5d>] ? lbug_with_loc+0x8d/0xb0 [libcfs] [ 5006.824123] [<ffffffffa05a3027>] ? lprocfs_counter_sub+0x177/0x190 [lvfs] [ 5006.824403] [<ffffffffa07414ff>] ? ldlm_lock_put+0xcf/0x540 [ptlrpc] [ 5006.824698] [<ffffffffa0767fe0>] ? expired_lock_main+0x660/0x830 [ptlrpc] [ 5006.825038] [<ffffffff81057d60>] ? default_wake_function+0x0/0x20 [ 5006.825301] [<ffffffffa0767980>] ? expired_lock_main+0x0/0x830 [ptlrpc] [ 5006.825555] [<ffffffff8100c14a>] ? child_rip+0xa/0x20 [ 5006.825802] [<ffffffffa0767980>] ? expired_lock_main+0x0/0x830 [ptlrpc] [ 5006.826071] [<ffffffffa0767980>] ? expired_lock_main+0x0/0x830 [ptlrpc] [ 5006.826325] [<ffffffff8100c140>] ? child_rip+0x0/0x20
I have a crashdump in /exports/crashdumps/192.168.10.223-2013-01-31-14\:11\:49/vmcore