LU-2726 lprocfs: don't trust in_interrupt()

Disabling bottom halves is enough to make in_interrupt() return true
even if current is in process context. So remove the assertion that
cfs_in_interrupt() return false for non LPROCFS_STATS_FLAG_IRQ_SAFE
counters.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I9db0213c585d437a1a3793da3a1bf1379ef6196d